structural-typing/tests/ui/select_multiple_typos.stderr
error: Unknown field 'nane' in select!. Valid fields: name, email, id
  --> tests/ui/select_multiple_typos.rs:3:1
   |
 3 | #[structural]
   | ^^^^^^^^^^^^^
...
12 |     type Invalid = user::select!(nane, emial, id);
   |                    ------------------------------ in this macro invocation
   |
   = note: this error originates in the macro `user::select` (in Nightly builds, run with -Z macro-backtrace for more info)
